--- a/rapidsmsrw1000/apps/webapp/templates/webapp/login.html
+++ b/rapidsmsrw1000/apps/webapp/templates/webapp/login.html
@@ -16,7 +16,7 @@
 <h1>Please log in to RapidSMS</h1>
 
 
-<form method="post" action="{% url apps.webapp.views.login %}">{% csrf_token %}
+<form method="post" action="{% url 'apps.webapp.views.login' %}">{% csrf_token %}
 <table>
 <tr>
     <td>{{ form.username.label_tag }}</td>
@@ -30,7 +30,7 @@
 
 <input type="submit" value="login" />
 <input type="hidden" name="next" value="{{ next }}" />
-<a href="{% url django.contrib.auth.views.password_reset %}">Forgot your password?</a>
+<a href="{% url 'django.contrib.auth.views.password_reset' %}">Forgot your password?</a>
 </form>
 
 {% endif %}
