--- a/rapidsmsrw1000/apps/ubuzima/templates/ubuzima/report_table.html
+++ b/rapidsmsrw1000/apps/ubuzima/templates/ubuzima/report_table.html
@@ -19,12 +19,12 @@
     	{% for report in reports %}
         <tr>
           <td>{{report.indexcol}}</td>
-          <td>{{report.created_at}}</td>
-          <td>{{report.textfield_revence}}</td>
-          <td>{{report.textfield_kato}}</td>
-          <td>{{report.textfield_kalibwani}}</td>
-          <td>{{report.modified_at}}</td>
-          <td>{{report}}</td>
+          <td>{{report.report_date.date}}</td>
+          <td>PROV: {{report.province_pk}}, DIST: {{report.district_pk}}, HC: {{report.health_center_pk}}</td>
+          <td>{{report.report_type}}</td>
+          <td>{{report.reporter_pk}}</td>
+          <td>{{report.patient_id}}</td>
+          <td>{{report.reconstructed_msg}}</td>
         </tr>
       {% endfor %}
     </tbody>
