--- a/rapidsmsrw1000/apps/webapp/static/webapp/stylesheets/thoureports.css
+++ b/rapidsmsrw1000/apps/webapp/static/webapp/stylesheets/thoureports.css
@@ -1,3 +1,7 @@
+@import url("http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Roboto:400,700,900,100|Montserrat:400,700&subset=latin,latin-ext");
+.goodnum {
+  font-family: "Liberation Mono", "Montserrat", "Roboto", "PT Sans", "Open Sans", sans-serif; }
+
 body {
   margin: 0;
   padding: 0; }
@@ -78,7 +82,7 @@ a:hover {
   width: 389px;
   height: 18px;
   z-index: 7;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -89,7 +93,7 @@ a:hover {
   width: 359px;
   height: 18px;
   z-index: 8;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -108,7 +112,7 @@ a:hover {
   width: 320px;
   height: 53px;
   z-index: 10;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-size: 18px; }
 
 #Pregnanciesconfirmed_0 {
@@ -118,7 +122,7 @@ a:hover {
   width: 118px;
   height: 44px;
   z-index: 11;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-size: 18px;
   color: #f79242; }
 
@@ -129,7 +133,7 @@ a:hover {
   width: 62px;
   height: 28px;
   z-index: 12;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Liberation Mono", "Montserrat", "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-size: 30px;
   font-weight: bold; }
 
@@ -148,7 +152,7 @@ a:hover {
   width: 47px;
   height: 18px;
   z-index: 14;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -159,7 +163,7 @@ a:hover {
   width: 40px;
   height: 27px;
   z-index: 15;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 35px; }
 
@@ -170,7 +174,7 @@ a:hover {
   width: 494px;
   height: 19px;
   z-index: 16;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 19px;
   color: #b30000; }
@@ -182,7 +186,7 @@ a:hover {
   width: 46px;
   height: 18px;
   z-index: 17;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -193,7 +197,7 @@ a:hover {
   width: 39px;
   height: 28px;
   z-index: 18;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 35px; }
 
@@ -204,7 +208,7 @@ a:hover {
   width: 348px;
   height: 20px;
   z-index: 19;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 19px;
   color: #b30000; }
@@ -232,7 +236,7 @@ a:hover {
   width: 107px;
   height: 17px;
   z-index: 22;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 15px;
   color: #fff; }
@@ -244,7 +248,7 @@ a:hover {
   width: 60px;
   height: 27px;
   z-index: 23;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 35px; }
 
@@ -255,7 +259,7 @@ a:hover {
   width: 36px;
   height: 14px;
   z-index: 24;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -266,7 +270,7 @@ a:hover {
   width: 115px;
   height: 16px;
   z-index: 25;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 14px;
   color: #fff; }
@@ -278,7 +282,7 @@ a:hover {
   width: 39px;
   height: 27px;
   z-index: 26;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 35px; }
 
@@ -289,7 +293,7 @@ a:hover {
   width: 36px;
   height: 14px;
   z-index: 27;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -315,15 +319,29 @@ a:hover {
   position: absolute;
   width: 326px;
   height: 17px;
-  z-index: 30; }
+  z-index: 30;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif;
+  font-weight: lighter;
+  font-size: 18px;
+  color: #f79242; }
 
 #MonthlyPregnancyAvg9 {
   left: 228px;
   top: 568px;
   position: absolute;
-  width: 222px;
+  width: 272px;
   height: 24px;
-  z-index: 31; }
+  z-index: 31;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif;
+  font-weight: lighter;
+  font-size: 18px;
+  color: #f79242; }
+  #MonthlyPregnancyAvg9 strong {
+    color: black;
+    font-weight: normal;
+    padding-left: 10px;
+    font-family: "Liberation Mono", "Montserrat", "Roboto", "PT Sans", "Open Sans", sans-serif;
+    font-size: 80%; }
 
 #Layer3 {
   left: 395px;
@@ -444,7 +462,7 @@ a:hover {
   width: 63px;
   height: 45px;
   z-index: 46;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -459,7 +477,7 @@ a:hover {
   width: 59px;
   height: 49px;
   z-index: 47;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 11px; }
 
@@ -474,7 +492,7 @@ a:hover {
   width: 36px;
   height: 49px;
   z-index: 48;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -489,7 +507,7 @@ a:hover {
   width: 53px;
   height: 49px;
   z-index: 49;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -504,7 +522,7 @@ a:hover {
   width: 59px;
   height: 49px;
   z-index: 50;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -519,7 +537,7 @@ a:hover {
   width: 65px;
   height: 48px;
   z-index: 51;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -534,7 +552,7 @@ a:hover {
   width: 42px;
   height: 49px;
   z-index: 52;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -549,7 +567,7 @@ a:hover {
   width: 59px;
   height: 48px;
   z-index: 53;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -564,7 +582,7 @@ a:hover {
   width: 72px;
   height: 48px;
   z-index: 54;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 10px; }
 
@@ -579,7 +597,7 @@ a:hover {
   width: 62px;
   height: 48px;
   z-index: 55;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -594,7 +612,7 @@ a:hover {
   width: 63px;
   height: 47px;
   z-index: 56;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 10px; }
 
@@ -609,7 +627,7 @@ a:hover {
   width: 35px;
   height: 57px;
   z-index: 57;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 10px; }
 
@@ -624,7 +642,7 @@ a:hover {
   width: 46px;
   height: 56px;
   z-index: 58;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 10px; }
 
@@ -639,7 +657,7 @@ a:hover {
   width: 48px;
   height: 44px;
   z-index: 59;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -670,7 +688,7 @@ a:hover {
   width: 79px;
   height: 17px;
   z-index: 62;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -681,7 +699,7 @@ a:hover {
   width: 137px;
   height: 61px;
   z-index: 63;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 20px; }
 
@@ -692,7 +710,7 @@ a:hover {
   width: 74px;
   height: 13px;
   z-index: 64;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 12px; }
 
@@ -728,7 +746,7 @@ a:hover {
   width: 376px;
   height: 78px;
   z-index: 68;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -765,7 +783,7 @@ a:hover {
   width: 36px;
   height: 7px;
   z-index: 72;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 10px; }
 
@@ -776,7 +794,7 @@ a:hover {
   width: 34px;
   height: 7px;
   z-index: 73;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 10px; }
 
@@ -787,7 +805,7 @@ a:hover {
   width: 66px;
   height: 7px;
   z-index: 74;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: normal;
   font-size: 10px; }
 
@@ -1073,7 +1091,7 @@ a:hover {
   width: 162px;
   height: 170px;
   z-index: 104;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-size: 11px; }
 
 #FollowusonSocialNetw {
@@ -1083,7 +1101,7 @@ a:hover {
   width: 183px;
   height: 59px;
   z-index: 105;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-size: 11px; }
 
 #ContactUsReachouttou > strong {
@@ -1139,7 +1157,7 @@ a:hover {
   width: 286px;
   height: 25px;
   z-index: 111;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -1150,7 +1168,7 @@ a:hover {
   width: 127px;
   height: 31px;
   z-index: 112;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 18px; }
 
@@ -1165,7 +1183,7 @@ a:hover {
   width: 126px;
   height: 31px;
   z-index: 113;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 18px; }
 
@@ -1180,7 +1198,7 @@ a:hover {
   width: 214px;
   height: 25px;
   z-index: 114;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 20px; }
 
@@ -1191,7 +1209,7 @@ a:hover {
   width: 213px;
   height: 33px;
   z-index: 115;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: bold;
   font-size: 25px; }
 
@@ -1226,7 +1244,7 @@ a:hover {
   width: 112px;
   height: 12px;
   z-index: 119;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-size: 15px;
   color: #fff; }
 
@@ -1237,7 +1255,7 @@ a:hover {
   width: 40px;
   height: 31px;
   z-index: 120;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 30px;
   color: #fff; }
@@ -1249,7 +1267,7 @@ a:hover {
   width: 101px;
   height: 12px;
   z-index: 121;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-size: 15px;
   color: #fff; }
 
@@ -1260,7 +1278,7 @@ a:hover {
   width: 46px;
   height: 31px;
   z-index: 122;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 30px;
   color: #fff; }
@@ -1280,6 +1298,6 @@ a:hover {
   width: 275px;
   height: 44px;
   z-index: 124;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Roboto", "PT Sans", "Open Sans", sans-serif, sans-serif;
   font-weight: lighter;
   font-size: 15px; }
