Manzi templates integrated!

--- a/rapidsmsrw1000/apps/ubuzima/templates/novatemplates/charts.html
+++ b/rapidsmsrw1000/apps/ubuzima/templates/novatemplates/charts.html
@@ -111,7 +111,7 @@
       <div id="MonthlyPregnancyAvg9">
               
         <!--  <img src="/static/webapp/images/reports/MonthlyPregnancyAvg9.png">  -->
-        Monthly Pregnancy Avg: <strong id="avgdest">92</strong>
+        Monthly Pregnancy Avg: <strong id="avgdest"></strong>
       
       </div>
 			<!--  -->
@@ -119,19 +119,19 @@
 			<!-- Risks -->
 			<div id="VectorSmartObject"><img src="/static/webapp/images/reports/VectorSmartObject.png"></div>
 			<div id="risks69">
-			69%
+              {{  display.prpc  }}%
 			</div>
 			<div id="risks78">
-			78
+              {{  display.pr  }}
 			</div>
 			<div id="numberofmotherpr">
 			Number of Mothers well by PR(Patient Directly Referred):
 			</div>
 			<div id="risks66">
-			66%
+              {{  display.aapc  }}%
 			</div>
 			<div id="risks65">
-			65
+              {{  display.aa  }}
 			</div>
 			<div id="numberofmotherswell">
 			Number of Mothers well by AA(ASM):
@@ -141,20 +141,20 @@
 			<div id="ReportedRisks">
 			Reported Risks
 			</div>
-			<div id="layer_129">
-			129
+			<div class="goodnum" id="layer_129">
+              {{  display.risks }}
 			</div>
 			<div id="layer_89">
-			98%
+              {{  display.riskpc  }}%
 			</div>
 			<div id="ResultsReported">
 			Results Reported
 			</div>
 			<div id="layer_89_0">
-			89
+              {{  display.rezes }}
 			</div>
 			<div id="layer_75">
-			75%
+              {{  display.rezpc }}%
 			</div>
 			<!--  -->
 			<!-- Symptoms -->
@@ -173,46 +173,46 @@
 			<div id="Layer1copy12"><img src="/static/webapp/images/reports/Layer1copy12.png"></div>
 			<div id="Layer1copy13"><img src="/static/webapp/images/reports/Layer1copy13.png"></div>
 			<div id="COUGHING24">
-			COUGHING <br><br><strong>24</strong>
+        COUGHING <br><br><strong>{{ display.info.coughing }}</strong>
 			</div>
 			<div id="DIARRHEA33">
-			DIARRHEA33<br><br><strong>33</strong>
+        DIARRHEA33<br><br><strong>{{  display.info.diarrhoea  }}</strong>
 			</div>
 			<div id="FEVER12">
-			FEVER<br><br><strong>12</strong>
+        FEVER<br><br><strong>{{ display.info.fever  }}</strong>
 			</div>
 			<div id="MALARIA09">
-			MALARIA<br><br><strong>09</strong>
+        MALARIA<br><br><strong>{{ display.info.malaria  }}</strong>
 			</div>
 			<div id="VOMITING18">
-			VOMITING<br><br><strong>18</strong>
+        VOMITING<br><br><strong>{{  display.info.vomiting  }}</strong>
 			</div>
 			<div id="STILLBORN21">
-			STILLBORN<br><br><strong>21</strong>
+        STILLBORN<br><br><strong>{{ display.info.stillb  }}</strong>
 			</div>
 			<div id="EDEMA13">
-			EDEMA<br><br><strong>13</strong>
+        EDEMA<br><br><strong>{{ display.info.oedema  }}</strong>
 			</div>
 			<div id="JAUNDICE09">
-			JAUNDICE<br><br><strong>09</strong>
+        JAUNDICE<br><br><strong>{{  display.info.jaun  }}</strong>
 			</div>
 			<div id="PNEUMONIA21">
-			PNEUMONIAM<br><br><strong>21</strong>
+        PNEUMONIAM<br><br><strong>{{  display.info.pneumo  }}</strong>
 			</div>
 			<div id="DISABILITY21">
-			DISABILITY<br><br><strong>21</strong>
+        DISABILITY<br><br><strong>{{  display.info.disab  }}</strong>
 			</div>
 			<div id="HYPOTHEMIA21">
-			HYPOTHEMIA<br><br><strong>21</strong>
+        HYPOTHEMIA<br><br><strong>{{  display.info.hypoth  }}</strong>
 			</div>
 			<div id="CLEFTPALATE21">
-			CLEFTPALATE<br><br><strong>21</strong>
+        CLEFTPALATE<br><br><strong>{{ display.info.ibibari  }}</strong>
 			</div>
 			<div id="CORDINFECTION">
-			CORD<br></>INFECTION<br><br><strong>21</strong>
+        CORD<br></>INFECTION<br><br><strong>{{  display.info.cordi  }}</strong>
 			</div>
 			<div id="NECKSTIFFNESS">
-			NECK<br>STIFFNESS<br><strong>21</strong>
+        NECK<br>STIFFNESS<br><strong>{{ display.info.necks  }}</strong>
 			</div>
 			<div id="motherssympotmpic">
 			<img src="/static/webapp/images/reports/motherssympotmpic.png">
