--- a/rapidsmsrw1000/apps/webapp/static/webapp/stylesheets/thoureports.scss
+++ b/rapidsmsrw1000/apps/webapp/static/webapp/stylesheets/thoureports.scss
@@ -1,9 +1,11 @@
 @import url('http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Roboto:400,700,900,100|Montserrat:400,700&subset=latin,latin-ext');
 $font1: "Roboto", "PT Sans", "Open Sans", sans-serif;
-$font2: "Liberation Mono", "Montserrat", $font1;
+$font2: "Montserrat", $font1;
 $font3: $font2;
 $col1: #f79242;
 $black: #000;
+$numleft: 30;
+$numleft2: 20;
 
 .goodnum
 {
@@ -198,7 +200,7 @@ $black: #000;
 
  #risks78 
 { 
-	 left: 790px; 
+	 left: 790px - $numleft2; 
 	 top: 1013px; 
 	 position: absolute; 
 	 width: 40px;
@@ -242,7 +244,7 @@ $black: #000;
 
  #risks65 
 { 
-	 left: 648px; 
+	 left: 648px - $numleft; 
 	 top: 990px; 
 	 position: absolute; 
 	 width: 39px;
@@ -1504,7 +1506,7 @@ $black: #000;
 
  #LESSTHAN1990 
 { 
-	 left: 167px; 
+	 left: 167px;
 	 top: 1657px; 
 	 position: absolute; 
 	 width: 129px;
@@ -1565,7 +1567,7 @@ $black: #000;
 
  #layer_90 
 { 
-	 left: 210px; 
+	 left: 210px - 30; 
 	 top: 1735px; 
 	 position: absolute; 
 	 width: 46px;
