--- a/rapidsmsrw1000/apps/ubuzima/templates/novatemplates/charts.html
+++ b/rapidsmsrw1000/apps/ubuzima/templates/novatemplates/charts.html
@@ -111,7 +111,7 @@
       <div id="MonthlyPregnancyAvg9">
               
         <!--  <img src="/static/webapp/images/reports/MonthlyPregnancyAvg9.png">  -->
-        Monthly Pregnancy Avg: <strong id="avgdest"></strong>
+        Monthly Pregnancy Avg: <strong id="avgdest">&#133;</strong>
       
       </div>
 			<!--  -->
